# Spider

./: .gitignore  CMakeLists.txt  Instruction.txt  Makefile  README.md  Technical description.txt  build.bat
config/: config.ini
src/common/: config_parser.cpp  config_parser.h  database.cpp  database.h  html_parser.cpp  html_parser.h  text_indexer.cpp  text_indexer.h
src/search_server/: http_server.cpp  http_server.h  main.cpp  search_engine.cpp  search_engine.h
src/spider/: http_client.cpp  http_client.h  main.cpp  spider.cpp  spider.h  url_queue.cpp  url_queue.h
